tests/baselines/reference/constructorOverloads1.errors.txt
tests/cases/compiler/constructorOverloads1.ts(2,5): error TS2392: Multiple constructor implementations are not allowed.
tests/cases/compiler/constructorOverloads1.ts(3,5): error TS2392: Multiple constructor implementations are not allowed.
tests/cases/compiler/constructorOverloads1.ts(4,5): error TS2392: Multiple constructor implementations are not allowed.
tests/cases/compiler/constructorOverloads1.ts(7,5): error TS2392: Multiple constructor implementations are not allowed.
tests/cases/compiler/constructorOverloads1.ts(16,18): error TS2345: Argument of type 'Foo' is not assignable to parameter of type 'number'.
tests/cases/compiler/constructorOverloads1.ts(17,18): error TS2345: Argument of type 'Foo[]' is not assignable to parameter of type 'number'.


==== tests/cases/compiler/constructorOverloads1.ts (6 errors) ====
    class Foo {
        constructor(s: string);
        ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2392: Multiple constructor implementations are not allowed.
        constructor(n: number);
        ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2392: Multiple constructor implementations are not allowed.
        constructor(x: any) {
        ~~~~~~~~~~~~~~~~~~~~~
    
    
        }
    ~~~~~
!!! error TS2392: Multiple constructor implementations are not allowed.
        constructor(x: any) {
        ~~~~~~~~~~~~~~~~~~~~~
    
    
        }
    ~~~~~
!!! error TS2392: Multiple constructor implementations are not allowed.
        bar1() {  /*WScript.Echo("bar1");*/ }
        bar2() {  /*WScript.Echo("bar1");*/ }
    }
    
    var f1 = new Foo("hey");
    var f2 = new Foo(0);
    var f3 = new Foo(f1);
                     ~~
!!! error TS2345: Argument of type 'Foo' is not assignable to parameter of type 'number'.
    var f4 = new Foo([f1,f2,f3]);
                     ~~~~~~~~~~
!!! error TS2345: Argument of type 'Foo[]' is not assignable to parameter of type 'number'.
    
    f1.bar1();
    f1.bar2();
    